--- a/.arcconfig
+++ b/.arcconfig
@@ -2,4 +2,4 @@
  "project_id" : "aowp-academy-capstone",
  "conduit_uri" : "http://75.101.128.16/"
 }
- //jhjhj
+ //jhjhjchange by shakti for demo purpose
